Run app at a subpath

--- a/web/map.html
+++ b/web/map.html
@@ -240,7 +240,7 @@ function refreshMarkers() {
     var server = localStorage.getItem('server');
     var url;
     if (server === null) {
-        url = 'http://api.gc.funkenburg.net';
+        url = 'http://gc.funkenburg.net/api';
     } else {
         url = server;
     }
