Make attribute filters scrollable

--- a/web/map.html
+++ b/web/map.html
@@ -34,6 +34,12 @@ li span.glyphicon {
     text-align: right;
     color: red;
 }
+
+.attributeFilters {
+    height: auto;
+    max-height: 300px;
+    overflow-x: hidden;
+}
         </style>
     </head>
     <body>
