Use https for gc.funkenburg.net api

--- a/web/map.html
+++ b/web/map.html
@@ -47,16 +47,16 @@ li span.glyphicon {
         <div class="filter">
             <div class="btn-toolbar" role="toolbar">
                 <div class="btn-group btn-group-xs typeFilters" data-toggle="buttons">
-                    <button data-type="2" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/2.gif"/></button>
-                    <button data-type="3" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/3.gif"/></button>
-                    <button data-type="5" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/5.gif"/></button>
-                    <button data-type="6" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/6.gif"/></button>
-                    <button data-type="8" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/8.gif"/></button>
-                    <button data-type="11" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/11.gif"/></button>
-                    <button data-type="13" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/13.gif"/></button>
-                    <button data-type="137" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/137.gif"/></button>
-                    <button data-type="453" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/453.gif"/></button>
-                    <button data-type="1858" type="button" class="btn btn-default"><img class="gctype" src="http://gc.funkenburg.net/img/1858.gif"/></button>
+                    <button data-type="2" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/2.gif"/></button>
+                    <button data-type="3" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/3.gif"/></button>
+                    <button data-type="5" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/5.gif"/></button>
+                    <button data-type="6" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/6.gif"/></button>
+                    <button data-type="8" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/8.gif"/></button>
+                    <button data-type="11" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/11.gif"/></button>
+                    <button data-type="13" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/13.gif"/></button>
+                    <button data-type="137" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/137.gif"/></button>
+                    <button data-type="453" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/453.gif"/></button>
+                    <button data-type="1858" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/1858.gif"/></button>
                 </div>
             </div>
             <form id="filter-form" role="form">
@@ -419,7 +419,7 @@ function refreshMarkers() {
     var server = localStorage.getItem('server');
     var url;
     if (server === null) {
-        url = 'http://gc.funkenburg.net/api';
+        url = 'https://gc.funkenburg.net/api';
     } else {
         url = server;
     }
