use https tileserver

--- a/web/map.html
+++ b/web/map.html
@@ -356,7 +356,7 @@ var icons = {
 
 var map = L.map('map').setView([51.186309, 12.622862], 13);
 
-L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: 'openstreetmap',
     maxZoom: 18
 }).addTo(map);
