--- a/web/map.html
+++ b/web/map.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <title>Geocaching Map</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="vendor/leaflet/leaflet.css" />
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/leaflet/leaflet.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
         <style>
 html, body, #map {
     margin: 0;
@@ -47,16 +47,16 @@ li span.glyphicon {
         <div class="filter">
             <div class="btn-toolbar" role="toolbar">
                 <div class="btn-group btn-group-xs typeFilters" data-toggle="buttons">
-                    <button data-type="2" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/2.gif"/></button>
-                    <button data-type="3" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/3.gif"/></button>
-                    <button data-type="5" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/5.gif"/></button>
-                    <button data-type="6" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/6.gif"/></button>
-                    <button data-type="8" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/8.gif"/></button>
-                    <button data-type="11" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/11.gif"/></button>
-                    <button data-type="13" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/13.gif"/></button>
-                    <button data-type="137" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/137.gif"/></button>
-                    <button data-type="453" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/453.gif"/></button>
-                    <button data-type="1858" type="button" class="btn btn-default"><img class="gctype" src="https://gc.funkenburg.net/img/1858.gif"/></button>
+                    <button data-type="2" type="button" class="btn btn-default"><img class="gctype" src="img/2.gif"/></button>
+                    <button data-type="3" type="button" class="btn btn-default"><img class="gctype" src="img/3.gif"/></button>
+                    <button data-type="5" type="button" class="btn btn-default"><img class="gctype" src="img/5.gif"/></button>
+                    <button data-type="6" type="button" class="btn btn-default"><img class="gctype" src="img/6.gif"/></button>
+                    <button data-type="8" type="button" class="btn btn-default"><img class="gctype" src="img/8.gif"/></button>
+                    <button data-type="11" type="button" class="btn btn-default"><img class="gctype" src="img/11.gif"/></button>
+                    <button data-type="13" type="button" class="btn btn-default"><img class="gctype" src="img/13.gif"/></button>
+                    <button data-type="137" type="button" class="btn btn-default"><img class="gctype" src="img/137.gif"/></button>
+                    <button data-type="453" type="button" class="btn btn-default"><img class="gctype" src="img/453.gif"/></button>
+                    <button data-type="1858" type="button" class="btn btn-default"><img class="gctype" src="img/1858.gif"/></button>
                 </div>
             </div>
             <form id="filter-form" role="form">
@@ -259,7 +259,7 @@ function addAttributeIcon(id) {
     }
     var name = attributes[plainId];
     var suffix = isOn ? 'yes' : 'no';
-    var icon = '<img id="attributeFilter-' + id + '" src="http://www.geocaching.com/images/attributes/' + name + '-' + suffix + '.gif"/>';
+    var icon = '<img id="attributeFilter-' + id + '" src="https://www.geocaching.com/images/attributes/' + name + '-' + suffix + '.gif"/>';
     $("#activeAttributeIds").append(icon);
 }
 
