remove duplicate vendorized files

--- a/web/index.html
+++ b/web/index.html
@@ -2,10 +2,10 @@
 layout: default
 title: POI Generator
 scripts:
-  - poi.js
-  - index.js
-  - FileSaver.js
-  - jszip.min.js
+  - js/poi.js
+  - js/index.js
+  - vendor/FileSaver.js
+  - vendor/jszip.min.js
 ---
 
 <div class="row">
