--- a/web2/index.html
+++ b/web2/index.html
@@ -15,11 +15,15 @@
 
 <body>
     <div class="ui page">
-        <div class="ui four item menu">
-            <a class="active item">POI Generator</a>
-            <a class="item">Geocache Map</a>
-            <a class="item">Track Analysis</a>
-            <a class="item">Statistics</a>
+        <div class="ui left visible vertical inverted labeled icon sidebar menu">
+            <div class="header item"><i class="home icon"></i>Cache Cache</div>
+            <a class="active item"><i class="marker icon"></i>POI Generator</a>
+            <a class="item"><i class="map icon"></i>Geocache Map</a>
+            <a class="item">
+                <i class="sort content ascending icon"></i>
+                Track Analysis
+            </a>
+            <a class="item"><i class="line chart icon"></i>Statistics</a>
         </div>
 
         <h1 class="ui header dividing">POI Generator</h1>
@@ -58,7 +62,10 @@
                   </div>
                 </div>
               </div>
-            <div class="ui submit button">Generate</div>
+            <div class="ui submit labeled icon button">
+                <i class="cloud download icon"></i>
+                Generate
+            </div>
         </div>
     </div>
 </body>
