--- a/web2/index.html
+++ b/web2/index.html
@@ -8,11 +8,8 @@
 
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/semantic.min.js"></script>
-  <script src="js/FileSaver.js"></script>
-  <script src="js/jszip.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-  <script src="js/index.js"></script>
+  <script src="bundle.js"></script>
 </head>
 
 <body>
