enable all geocache file types

--- a/web2/index.html
+++ b/web2/index.html
@@ -41,8 +41,26 @@
                 </div>
                 <div class="field">
                     <div class="ui checkbox checked">
-                        <input type="checkbox" id="type-multi" value="3" checked="checked"/>
+                        <input type="checkbox" id="type-multicache" value="3" checked="checked"/>
                         <label>Multi Cache</label>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="ui checkbox checked">
+                        <input type="checkbox" id="type-earthcache" value="137" checked="checked"/>
+                        <label>Earth Cache</label>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="ui checkbox checked">
+                        <input type="checkbox" id="type-letterbox" value="5" checked="checked"/>
+                        <label>Letterbox</label>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="ui checkbox checked">
+                        <input type="checkbox" id="type-webcam" value="11" checked="checked"/>
+                        <label>Webcam Cache</label>
                     </div>
                 </div>
             </div>
