--- a/web2/index.html
+++ b/web2/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <title>GC</title>
+    <meta charset="utf-8" />
+    <title>GC</title>
 
-  <link rel="stylesheet" type="text/css" href="css/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="css/semantic.min.css"/>
+    <link rel="stylesheet" type="text/css" href="ccss/leaflet.css" />
 
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/semantic.min.js"></script>
-
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/semantic.min.js"></script>
 </head>
 
 <body>
