--- a/web2/index.html
+++ b/web2/index.html
@@ -5,7 +5,7 @@
     <title>GC</title>
 
     <link rel="stylesheet" type="text/css" href="css/semantic.min.css"/>
-    <link rel="stylesheet" type="text/css" href="ccss/leaflet.css" />
+    <link rel="stylesheet" type="text/css" href="css/leaflet.css" />
 
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/semantic.min.js"></script>
