--- a/web2/index.html
+++ b/web2/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>GC</title>
 
-    <link rel="stylesheet" type="text/css" href="css/semantic.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/semantic.css">
     <link rel="stylesheet" type="text/css" href="css/leaflet.css" />
 
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/semantic.min.js"></script>
+    <!--<script src="js/jquery-2.1.4.min.js"></script>-->
+    <!--<script src="js/semantic.js"></script>-->
 </head>
 
 <body>
