--- a/web2/index.html
+++ b/web2/index.html
@@ -41,6 +41,9 @@
         }
     </style>
     <div class="container"><div class="loader">Loading</div></div>
+    <noscript>
+        <div style="position: fixed; top: 0; left: 0; height: 100%; width: 100%; z-index: 10; background-color: #fff;">This page requires Javascript.  Sad page is sad.</div>
+    </noscript>
     <script src="assets/bundle.js"></script>
 </body>
 
