--- a/web2/index.html
+++ b/web2/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>GC</title>
+    <title>Cache Cache</title>
+    <link rel="shortcut icon" href="favicon.png">
 </head>
 
 <body>
