--- a/web/index.html
+++ b/web/index.html
@@ -1,51 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>Cache Cache</title>
-    <link rel="shortcut icon" href="favicon.png">
-</head>
-
-<body>
-    <!-- yes, styles are not allowed in bodies,
-         but this way they are removed when the script loads -->
-    <style>
-        html, body, .container {
-          height: 100%;
-          margin: 0;
-          width: 100%;
-        }
-        .container {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-        .loader {
-          font-family: sans-serif;
-          font-size: 4em;
-          color: #444;
-          animation-duration: 2s;
-          animation-name: pulse;
-          animation-iteration-count: infinite;
-          animation-direction: alternate;
-        }
-        @keyframes pulse {
-          from {
-            font-size: 2em;
-            opacity: 0.2;
-          }
-
-          to {
-            font-size: 6em;
-            opactiy: 1;
-          }
-        }
-    </style>
-    <div class="container"><div class="loader">Loading</div></div>
-    <noscript>
-        <div style="position: fixed; top: 0; left: 0; height: 100%; width: 100%; z-index: 10; background-color: #fff;">This page requires Javascript.  Sad page is sad.</div>
-    </noscript>
-    <script src="assets/bundle.js"></script>
-</body>
-
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>r³ foundation boilerplate</title>
+    <link rel="stylesheet" href="/assets/bundle.css"></link>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="/assets/bundle.js"></script>
+  </body>
 </html>
